[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fl-ids"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.18.0",
    "flwr-datasets[vision]>=0.5.0",
    "scikit-learn>=1.6.1",
    "pandas>=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "namber"

[tool.flwr.app.components]
serverapp = "fl_ids.server_app:app"
clientapp = "fl_ids.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
local-epochs = 5
batch-size = 32
learning-rate = 0.001
hidden-sizes = "128,64"
device = "cpu"
dataset-path = "./dataset"
num-rows = 50000
use-non-iid = true
dirichlet-alpha = 0.5
min-samples-per-class = 2
adversarial-attack-type = "pgd"
adversarial-epsilon = 0.3
adversarial-alpha = 0.01
adversarial-num-iter = 10
adversarial-random-start = true

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 5
